Version 2.0; updated to 1.18; now uses Maven framework.